# PowerMCP

./: .gitignore  README.md  basecase.sav  config.json  config.json.example  new-load.sav  pslf_test.prompt  system-prompt.md
PSCAD/: COMPARISON_GUIDE.md  EXAMPLES.md  README.md  mcp_installer.py  pyproject.toml
PSCAD/docs/md/: mhi_pscad.md  mhi_pscad_annotation.md  mhi_pscad_canvas.md  mhi_pscad_certificate.md  mhi_pscad_compiler.md  mhi_pscad_component.md  mhi_pscad_control.md  mhi_pscad_definition.md  mhi_pscad_form.md  mhi_pscad_graph.md  mhi_pscad_graphics.md  mhi_pscad_instrument.md  mhi_pscad_parameter_grid.md  mhi_pscad_project.md  mhi_pscad_remote.md  mhi_pscad_resource.md  mhi_pscad_simset.md  mhi_pscad_types.md  mhi_pscad_unit.md  mhi_pscad_wizard.md
PSCAD/docs/raw/: changes.txt  index.txt  inspect_mhi_pscad.txt  inspect_mhi_pscad_graph.txt  mhi_pscad.txt  mhi_pscad_annotation.txt  mhi_pscad_canvas.txt  mhi_pscad_certificate.txt  mhi_pscad_compiler.txt  mhi_pscad_component.txt  mhi_pscad_control.txt  mhi_pscad_definition.txt  mhi_pscad_form.txt  mhi_pscad_graph.txt  mhi_pscad_graphics.txt  mhi_pscad_instrument.txt  mhi_pscad_parameter_grid.txt  mhi_pscad_project.txt  mhi_pscad_remote.txt  mhi_pscad_resource.txt  mhi_pscad_simset.txt  mhi_pscad_types.txt  mhi_pscad_unit.txt  mhi_pscad_wizard.txt  psout_reference.txt  psout_tutorial_index.txt  quick_start.txt  reference_canvas.txt  reference_component.txt  (+13 more)
PSCAD/pscad_mcp/: __init__.py  main.py
PSCAD/tests/: failure_tests.py  test_concurrency.py  test_enhanced_tools.py  test_protocol.py  test_tools.py
(+2224 files in other folders)
